--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             deleteBtn.onclick = () => deleteTask(task, row);
 
             const attachBtn = document.createElement("button");
-            attachBtn.textContent = "📎";
+            attachBtn.textContent = "Anexar";
             attachBtn.classList.add("attach-btn");
             attachBtn.title = "Anexar arquivo(s)";
             attachBtn.onclick = () => openAttachModal(task);
